<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:fontFamily="@font/pt_serif"
        android:padding="4dp"
        android:text="@string/section"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/publish_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:fontFamily="@font/pt_serif"
        android:background="@color/colorBrown"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/published_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="@font/pt_serif"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section" />

    <ImageView
        android:id="@+id/news_photo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/short_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/short_news"
        android:fontFamily="@font/pt_serif"
        android:textSize="16sp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_photo" />
    
</androidx.constraintlayout.widget.ConstraintLayout>