<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    tools:context=".ui.fragments.NewsFragment">

    <LinearLayout
        android:id="@+id/networkStatusLayout"
        android:visibility="gone"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorStatusNotConnected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewNetworkStatus"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/text_no_connectivity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectPeriodLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/networkStatusLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/most_popular"
            android:fontFamily="@font/pt_serif"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_weight="1"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedChip="@+id/chip_day">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_day"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_week"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_month"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/progressBarStyle"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:progressDrawable="@drawable/color_progress"
        app:layout_constraintTop_toBottomOf="@id/selectPeriodLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recycler_view"
        tools:listitem="@layout/item_short_news"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectPeriodLayout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>